performance: update NuGet packages with vulnerabilities

--- a/CSharp_BookPlatform_Dec2024/BookPlatform.Services.Data/BookPlatform.Services.Data.csproj
+++ b/CSharp_BookPlatform_Dec2024/BookPlatform.Services.Data/BookPlatform.Services.Data.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.13.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BookPlatform.Common\BookPlatform.Common.csproj" />
     <ProjectReference Include="..\BookPlatform.Data.Models\BookPlatform.Data.Models.csproj" />
     <ProjectReference Include="..\BookPlatform.Data\BookPlatform.Data.csproj" />
